# ByteCampGNNSys

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  run.sh
cmake/: FindLibEvent.cmake  FindThrift.cmake
gen-cpp/: ByteGraph_types.h  GraphServices.cpp  GraphServices.h  GraphServices_server.skeleton.cpp
src/: CMakeLists.txt  benchtest.cpp
src/client/: cache_base.h  client.cpp  client.h  client_base.h  client_with_cache.cpp  client_with_cache.h  client_without_cache.cpp  client_without_cache.h  graph_aware_cache.cpp  graph_aware_cache.h  graph_client.cc  lru_cache.cpp  lru_cache.h  rpc_client.cpp  rpc_client.h  sample_test.cc  simple_cache.cpp  simple_cache.h
src/engine/: alias_sampling.h  graph_engine.cpp  graph_engine.h  its_sampling.h
src/graph/: graph.cpp  graph.h  graph_loader.h  type.h
src/server/: worker.cpp  worker.h
src/thrift-idls/: ByteGraph.thrift
src/utils/: random.h  utils.h
test/: CMakeLists.txt  MethodTest.cpp  MethodTest.h  sample_test.cc
